Update reference to quickstart

--- a/k8s/start.yaml
+++ b/k8s/start.yaml
@@ -12,9 +12,9 @@ metadata:
   namespace: bigbang
 spec:
   interval: 1m
-  url: https://repo1.dso.mil/platform-one/hello-world/big-bang-universe.git
+  url: https://repo1.dso.mil/platform-one/quick-start/big-bang.git
   ref:
-    branch: play-with-terraform
+    branch: master
 
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
