--- a/k8s/flux.yaml
+++ b/k8s/flux.yaml
@@ -1,24 +1,25 @@
 # sourced from https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/scripts/deploy/flux.yaml
 ---
-# GitOps Toolkit revision latest
+# Installed with flux install --image-pull-secret=private-registry --registry=registry1.dso.mil/ironbank/fluxcd --dry-run --export > flux.yaml
+# Flux version: v0.10.0
 # Components: source-controller,kustomize-controller,helm-controller,notification-controller
 apiVersion: v1
 kind: Namespace
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: flux-system
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: alerts.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -184,11 +185,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: buckets.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -371,11 +372,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: gitrepositories.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -586,11 +587,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: helmcharts.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -777,11 +778,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: helmreleases.helm.toolkit.fluxcd.io
 spec:
   group: helm.toolkit.fluxcd.io
@@ -1292,11 +1293,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: helmrepositories.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -1459,11 +1460,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: kustomizations.kustomize.toolkit.fluxcd.io
 spec:
   group: kustomize.toolkit.fluxcd.io
@@ -1537,6 +1538,10 @@ spec:
                   - name
                   type: object
                 type: array
+              force:
+                default: false
+                description: Force instructs the controller to recreate resources when patching fails due to an immutable field change.
+                type: boolean
               healthChecks:
                 description: A list of resources to be included in the health assessment.
                 items:
@@ -1672,6 +1677,27 @@ spec:
                       type: string
                     description: Substitute holds a map of key/value pairs. The variables defined in your YAML manifests that match any of the keys defined in the map will be substituted with the set value. Includes support for bash string replacement functions e.g. ${var:=default}, ${var:position} and ${var/substring/replacement}.
                     type: object
+                  substituteFrom:
+                    description: SubstituteFrom holds references to ConfigMaps and Secrets containing the variables and their values to be substituted in the YAML manifests. The ConfigMap and the Secret data keys represent the var names and they must match the vars declared in the manifests for the substitution to happen.
+                    items:
+                      description: SubstituteReference contains a reference to a resource containing the variables name and value.
+                      properties:
+                        kind:
+                          description: Kind of the values referent, valid values are ('Secret', 'ConfigMap').
+                          enum:
+                          - Secret
+                          - ConfigMap
+                          type: string
+                        name:
+                          description: Name of the values referent. Should reside in the same namespace as the referring resource.
+                          maxLength: 253
+                          minLength: 1
+                          type: string
+                      required:
+                      - kind
+                      - name
+                      type: object
+                    type: array
                 type: object
               prune:
                 description: Prune enables garbage collection.
@@ -1716,7 +1742,7 @@ spec:
                 description: Timeout for validation, apply and health checking operations. Defaults to 'Interval' duration.
                 type: string
               validation:
-                description: Validate the Kubernetes objects before applying them on the cluster. The validation strategy can be 'client' (local dry-run), 'server' (APIServer dry-run) or 'none'.
+                description: Validate the Kubernetes objects before applying them on the cluster. The validation strategy can be 'client' (local dry-run), 'server' (APIServer dry-run) or 'none'. When 'Force' is 'true', validation will fallback to 'client' if set to 'server' because server-side validation is not supported in this scenario.
                 enum:
                 - none
                 - client
@@ -1830,11 +1856,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: providers.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -1903,6 +1929,7 @@ spec:
                 - gitlab
                 - bitbucket
                 - azuredevops
+                - googlechat
                 type: string
               username:
                 description: Bot username for this provider
@@ -1973,11 +2000,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: receivers.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -2079,6 +2106,7 @@ spec:
                 - quay
                 - gcr
                 - nexus
+                - acr
                 type: string
             required:
             - resources
@@ -2151,7 +2179,7 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: helm-controller
   namespace: flux-system
 ---
@@ -2160,7 +2188,7 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: kustomize-controller
   namespace: flux-system
 ---
@@ -2169,7 +2197,7 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: notification-controller
   namespace: flux-system
 ---
@@ -2178,7 +2206,7 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: source-controller
   namespace: flux-system
 ---
@@ -2187,7 +2215,7 @@ kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: crd-controller-flux-system
 rules:
 - apiGroups:
@@ -2266,7 +2294,7 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: cluster-reconciler-flux-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -2285,7 +2313,7 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: crd-controller-flux-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -2316,7 +2344,7 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
     control-plane: controller
   name: notification-controller
   namespace: flux-system
@@ -2335,7 +2363,7 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
     control-plane: controller
   name: source-controller
   namespace: flux-system
@@ -2354,7 +2382,7 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
     control-plane: controller
   name: webhook-receiver
   namespace: flux-system
@@ -2373,7 +2401,7 @@ kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
     control-plane: controller
   name: helm-controller
   namespace: flux-system
@@ -2402,7 +2430,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry1.dso.mil/ironbank/fluxcd/helm-controller:v0.7.0
+        image: registry1.dso.mil/ironbank/fluxcd/helm-controller:v0.9.0
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -2410,11 +2438,11 @@ spec:
             port: healthz
         name: manager
         ports:
-        - containerPort: 8080
-          name: http-prom
         - containerPort: 9440
           name: healthz
           protocol: TCP
+        - containerPort: 8080
+          name: http-prom
         readinessProbe:
           httpGet:
             path: /readyz
@@ -2447,7 +2475,7 @@ kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
     control-plane: controller
   name: kustomize-controller
   namespace: flux-system
@@ -2476,7 +2504,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry1.dso.mil/ironbank/fluxcd/kustomize-controller:v0.7.4
+        image: registry1.dso.mil/ironbank/fluxcd/kustomize-controller:v0.9.3
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -2484,11 +2512,11 @@ spec:
             port: healthz
         name: manager
         ports:
-        - containerPort: 8080
-          name: http-prom
         - containerPort: 9440
           name: healthz
           protocol: TCP
+        - containerPort: 8080
+          name: http-prom
         readinessProbe:
           httpGet:
             path: /readyz
@@ -2523,7 +2551,7 @@ kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
     control-plane: controller
   name: notification-controller
   namespace: flux-system
@@ -2551,7 +2579,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry1.dso.mil/ironbank/fluxcd/notification-controller:v0.8.0
+        image: registry1.dso.mil/ironbank/fluxcd/notification-controller:v0.12.0
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -2559,15 +2587,15 @@ spec:
             port: healthz
         name: manager
         ports:
+        - containerPort: 9440
+          name: healthz
+          protocol: TCP
         - containerPort: 9090
           name: http
         - containerPort: 9292
           name: http-webhook
         - containerPort: 8080
           name: http-prom
-        - containerPort: 9440
-          name: healthz
-          protocol: TCP
         readinessProbe:
           httpGet:
             path: /readyz
@@ -2600,7 +2628,7 @@ kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
     control-plane: controller
   name: source-controller
   namespace: flux-system
@@ -2633,7 +2661,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry1.dso.mil/ironbank/fluxcd/source-controller:v0.8.1
+        image: registry1.dso.mil/ironbank/fluxcd/source-controller:v0.9.1
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -2685,7 +2713,7 @@ kind: NetworkPolicy
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: allow-scraping
   namespace: flux-system
 spec:
@@ -2704,7 +2732,7 @@ kind: NetworkPolicy
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: allow-webhooks
   namespace: flux-system
 spec:
@@ -2722,7 +2750,7 @@ kind: NetworkPolicy
 metadata:
   labels:
     app.kubernetes.io/instance: flux-system
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: v0.10.0
   name: deny-ingress
   namespace: flux-system
 spec:
