--- a/configs/config
+++ b/configs/config
@@ -1,3 +1,4 @@
+# required for immutable filesytem requirements within flux kustomize-controller pod to allow for cloning private git repos
 apiVersion: v1
 clusters: []
 contexts:
